frame/support/test/tests/pallet_ui/mod_not_inlined.rs
#[frame_support::pallet]
mod foo;

fn main() {
}
